syntax = "proto3";

option go_package = "genproto/protos";

package protos;

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse) {}
    rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse) {}
}

message GetUserRequest {
    int32 user_id = 1;
}

message GetUserResponse {
    int32 user_id = 1;
    string username = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}

message UpdateUserRequest {
    int32 user_id = 1;
    string username = 2;
    string email = 3;
}

message UpdateUserResponse {
    bool success = 1;
    string message = 2;
}

message DeleteUserRequest {
    int32 user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message GetUserProfileRequest {
    int32 user_id = 1;
}

message GetUserProfileResponse {
    int32 user_id = 1;
    string full_name = 2;
    string bio = 3;
    string location = 4;
    string avatar_url = 5;
}

message UpdateUserProfileRequest {
    int32 user_id = 1;
    string full_name = 2;
    string bio = 3;
    string location = 4;
    string avatar_url = 5;
}

message UpdateUserProfileResponse {
    bool success = 1;
    string message = 2;
}
